--- a/app/index.html
+++ b/app/index.html
@@ -252,7 +252,7 @@
             <div class="send-msg__items">
                 <div class="send-msg__item">
                     <div class="send-msg__item--img">
-                        <img src="images/.png" alt="">      
+                        <img src="images/send1.png" alt="">      
                     </div>
                     <div class="send-msg__item--txt">
                         Мы получаем заявку
@@ -260,13 +260,16 @@
                     </div>
                 </div>
                 <div class="send-msg__item">
+                    <div class="send-msg__item--img">
+                        <img src="images/send2.png" alt="">      
+                    </div>
                     <div class="send-msg__item--txt">
                         Погружаемся в Ваш бизнес и помогаем сформировать технические требования к разработке
                     </div>   
                 </div>
                 <div class="send-msg__item">
                     <div class="send-msg__item--img">
-                        <img src="images/.png" alt="">      
+                        <img src="images/send3.png" alt="">      
                     </div>
                     <div class="send-msg__item--txt">
                         Проектируем мобильное приложение
@@ -275,7 +278,7 @@
                 </div>
                 <div class="send-msg__item">
                     <div class="send-msg__item--img">
-                        <img src="images/.png" alt="">      
+                        <img src="images/send4.png" alt="">      
                     </div>
                     <div class="send-msg__item--txt">
                         Делаем дизайн —
@@ -284,7 +287,7 @@
                 </div>
                 <div class="send-msg__item">
                     <div class="send-msg__item--img">
-                    <img src="images/.png" alt="">        
+                    <img src="images/send5.png" alt="">        
                     </div>
                     <div class="send-msg__item--txt">
                         Тестируем —
@@ -293,7 +296,7 @@
                 </div>
                 <div class="send-msg__item">
                     <div class="send-msg__item--img">
-                        <img src="images/.png" alt="">              
+                        <img src="images/send6.png" alt="">              
                     </div>
                     <div class="send-msg__item--txt">
                         Осуществляем поддержку — 
