--- a/app/index.html
+++ b/app/index.html
@@ -246,11 +246,11 @@
     </section>
     <section class="send-msg">
         <div class="container">
-            <div class="send-msg__title">
+            <div class="send-msg__title title">
                 что будет после отправки заявки?
             </div>
             <div class="send-msg__items">
-                <div class="send-msg__item">
+                <div class="send-msg__item col-md-2">
                     <div class="send-msg__item--img">
                         <img src="images/send1.png" alt="">      
                     </div>
@@ -259,7 +259,7 @@
                         и проводим с Вами бесплатную консультацию
                     </div>
                 </div>
-                <div class="send-msg__item">
+                <div class="send-msg__item col-md-2">
                     <div class="send-msg__item--img">
                         <img src="images/send2.png" alt="">      
                     </div>
@@ -267,7 +267,7 @@
                         Погружаемся в Ваш бизнес и помогаем сформировать технические требования к разработке
                     </div>   
                 </div>
-                <div class="send-msg__item">
+                <div class="send-msg__item col-md-2">
                     <div class="send-msg__item--img">
                         <img src="images/send3.png" alt="">      
                     </div>
@@ -276,7 +276,7 @@
                         для решения Ваших бизнес-задач
                     </div>
                 </div>
-                <div class="send-msg__item">
+                <div class="send-msg__item col-md-2">
                     <div class="send-msg__item--img">
                         <img src="images/send4.png" alt="">      
                     </div>
@@ -285,7 +285,7 @@
                         простой, понятный и удобный
                     </div>
                 </div>
-                <div class="send-msg__item">
+                <div class="send-msg__item col-md-2">
                     <div class="send-msg__item--img">
                     <img src="images/send5.png" alt="">        
                     </div>
@@ -294,7 +294,7 @@
                         проводим для Вас полную проверку приложения
                     </div>
                 </div>
-                <div class="send-msg__item">
+                <div class="send-msg__item col-md-2">
                     <div class="send-msg__item--img">
                         <img src="images/send6.png" alt="">              
                     </div>
