--- a/app/index.html
+++ b/app/index.html
@@ -304,9 +304,12 @@
                     </div>
                 </div>
             </div>
+            <div class="corner"></div>
         </div>
     </section>
-    <section class="support_month"></section>
+    <section class="support_month">
+        1 месяц поддержки - бесплатно!
+    </section>
     <section class="advantage">
         <div class="container">
             <div class="row">
@@ -345,8 +348,6 @@
                 <div class="parters-list col-md-12">
                     <div class="row">
                         <div class="partners-title">наши партнеры</div>
-                    </div>
-                    <div class="row">
                         <div class="col-md-12 text-center">
                             <div class="parters-list__item">
                                 <img src="images/partners3.jpg" alt="">
