--- a/app/index.html
+++ b/app/index.html
@@ -347,8 +347,10 @@
             <div class="row">
                 <div class="parters-list col-md-12">
                     <div class="row">
-                        <div class="partners-title">наши партнеры</div>
-                        <div class="col-md-12 text-center">
+                        <div class="text-center">
+                            <div class="partners-title">наши партнеры</div>
+                        </div>
+                        <div class="col-md-12 parters-list-wrap">
                             <div class="parters-list__item">
                                 <img src="images/partners3.jpg" alt="">
                             </div>
