--- a/app/index.html
+++ b/app/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/libs.min.js"></script>
+    <script src="js/common.js"></script>
 </head>
 
 <body>
     <section class="main">
+        <div class="btn-top">
+            <a href="" data-href="#"><img src="images/arrow-up.png" alt=""></a>
+        </div>
         <header class="header">
             <div class="header-container container">
                 <div class="header-logo">
@@ -351,35 +355,35 @@
                             <div class="partners-title">наши партнеры</div>
                         </div>
                         <div class="col-md-12 parters-list-wrap">
-                            <div class="parters-list__item">
+                            <div class="parters-list__item col-md-4 text-center">
                                 <img src="images/partners3.jpg" alt="">
                             </div>
-                            <div class="parters-list__item">
+                            <div class="parters-list__item col-md-4 text-center">
                                 <img src="images/partners9.jpg" alt="">    
                             </div>
-                            <div class="parters-list__item">
+                            <div class="parters-list__item col-md-4 text-center">
                                 <img src="images/partners6.jpg" alt="">    
                             </div>
                         </div>
                         <div class="row">
-                            <div class="parters-list__item">
+                            <div class="parters-list__item col-md-4 text-center">
                                 <img src="images/partners2.jpg" alt="">
                             </div>
-                            <div class="parters-list__item">
+                            <div class="parters-list__item col-md-4 text-center">
                                 <img src="images/partners4.jpg" alt="">     
                             </div>
-                            <div class="parters-list__item">
+                            <div class="parters-list__item col-md-4 text-center">
                                 <img src="images/partners7.jpg" alt="">    
                             </div>
                         </div>
                         <div class="row">
-                            <div class="parters-list__item">
+                            <div class="parters-list__item col-md-4 text-center">
                                 <img src="images/partners1.jpg" alt="">
                             </div>
-                            <div class="parters-list__item">
+                            <div class="parters-list__item col-md-4 text-center">
                                 <img src="images/partners5.jpg" alt="">     
                             </div>
-                            <div class="parters-list__item">
+                            <div class="parters-list__item col-md-4 text-center">
                                 <img src="images/partners8.jpg" alt="">    
                             </div>
                         </div>
