--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Деснолсофт</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/libs.min.js"></script>
     <script src="js/common.js"></script>
