--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,6 @@
             <video class="video" autoplay="true" loop="true" poster="images/preview-picture.jpg">
                 <source src="images/start-video.mp4" type="video/mp4">
             </video>
- 
             <div class="main-slogan-wrap">
                 <div class="main-slogan">
                     <div class="main-slogan__top">
@@ -59,18 +58,15 @@
             <div class="row">
                 <div class="web-app-dev__title">Мы разрабатываем мобильные приложения</div>
             </div>
-            <div class="row">                 
+            <div class="row">
                 <div class="web-app-dev__products center-block text-center">
                     <div class="web-app-dev__item">
                         <div class="web-app-dev__item-img"></div>
-                        Для среднего 
-                        и малого бизнеса
+                        Для среднего и малого бизнеса
                     </div>
                     <div class="web-app-dev__item">
                         <div class="web-app-dev__item-img"></div>
-                        Для крупного бизнеса 
-                        и производственных 
-                        предприятий
+                        Для крупного бизнеса и производственных предприятий
                     </div>
                     <div class="web-app-dev__item">
                         <div class="web-app-dev__item-img"></div>
@@ -78,8 +74,7 @@
                     </div>
                     <div class="web-app-dev__item">
                         <div class="web-app-dev__item-img"></div>
-                        Для служб 
-                        поддержки клиентов
+                        Для служб поддержки клиентов
                     </div>
                 </div>
             </div>
@@ -101,20 +96,63 @@
             </div>
         </div>
     </section>
-    
     <section class="get-mob-app">
         <div class="container">
             <div class="row">
                 <div class="get-mob-app__title title">
                     получите мобильное приложение и...
                 </div>
-                <div class="slider2">
-                    
+                <div class="col-md-8 center-block">
+                    <div class="row">
+                        <div class="slider2">
+                            <ul class="slider2__items">
+                                <li class="slider2__item">
+                                    <div class="slider2__item--img col-md-2">
+                                        <img src="images/robot.png" />
+                                    </div>
+                                    <div class="slider2__item--txt col-md-offset-1 col-md-4">
+                                        Ваши расходы за счет автоматизации бизнес-процессов
+                                    </div>
+                                </li>
+                                <li class="slider2__item">
+                                    <div class="slider2__item--img col-md-2">
+                                        <img src="images/robot.png" />
+                                    </div>
+                                    <div class="slider2__item--txt col-md-offset-1 col-md-4">
+                                        ...Управляйте данными с любой точке мира
+                                    </div>
+                                </li>
+                                <li class="slider2__item">
+                                    <div class="slider2__item--img col-md-2">
+                                        <img src="images/robot.png" />
+                                    </div>
+                                    <div class="slider2__item--txt col-md-offset-1 col-md-4">
+                                        ...Повышайте эффективность труда Ваших сотрудников
+                                    </div>
+                                </li>
+                                <li class="slider2__item">
+                                    <div class="slider2__item--img col-md-2">
+                                        <img src="images/robot.png" />
+                                    </div>
+                                    <div class="slider2__item--txt col-md-offset-1 col-md-4">
+                                        ...Ускоряйте принятие управленческих решений
+                                    </div>
+                                </li>
+                                <li class="slider2__item">
+                                    <div class="slider2__item--img col-md-2">
+                                        <img src="images/robot.png" />
+                                    </div>
+                                    <div class="slider2__item--txt col-md-offset-1 col-md-4">
+                                        ...Увеличивайте прибыльность Вашего бизнеса за счет доступности клиентов
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
     <section class="possibilities-app">
         <div class="container">
             <div class="row">
@@ -256,55 +294,50 @@
             <div class="send-msg__items">
                 <div class="send-msg__item col-md-2">
                     <div class="send-msg__item--img">
-                        <img src="images/send1.png" alt="">      
+                        <img src="images/send1.png" alt="">
                     </div>
                     <div class="send-msg__item--txt">
-                        Мы получаем заявку
-                        и проводим с Вами бесплатную консультацию
+                        Мы получаем заявку и проводим с Вами бесплатную консультацию
                     </div>
                 </div>
                 <div class="send-msg__item col-md-2">
                     <div class="send-msg__item--img">
-                        <img src="images/send2.png" alt="">      
+                        <img src="images/send2.png" alt="">
                     </div>
                     <div class="send-msg__item--txt">
                         Погружаемся в Ваш бизнес и помогаем сформировать технические требования к разработке
-                    </div>   
-                </div>
-                <div class="send-msg__item col-md-2">
-                    <div class="send-msg__item--img">
-                        <img src="images/send3.png" alt="">      
-                    </div>
-                    <div class="send-msg__item--txt">
-                        Проектируем мобильное приложение
-                        для решения Ваших бизнес-задач
                     </div>
                 </div>
                 <div class="send-msg__item col-md-2">
                     <div class="send-msg__item--img">
-                        <img src="images/send4.png" alt="">      
+                        <img src="images/send3.png" alt="">
                     </div>
                     <div class="send-msg__item--txt">
-                        Делаем дизайн —
-                        простой, понятный и удобный
+                        Проектируем мобильное приложение для решения Ваших бизнес-задач
                     </div>
                 </div>
                 <div class="send-msg__item col-md-2">
                     <div class="send-msg__item--img">
-                    <img src="images/send5.png" alt="">        
+                        <img src="images/send4.png" alt="">
                     </div>
                     <div class="send-msg__item--txt">
-                        Тестируем —
-                        проводим для Вас полную проверку приложения
+                        Делаем дизайн — простой, понятный и удобный
                     </div>
                 </div>
                 <div class="send-msg__item col-md-2">
                     <div class="send-msg__item--img">
-                        <img src="images/send6.png" alt="">              
+                        <img src="images/send5.png" alt="">
                     </div>
                     <div class="send-msg__item--txt">
-                        Осуществляем поддержку — 
-                        Вы можете быть уверены, что Ваше приложение работает исправно!
+                        Тестируем — проводим для Вас полную проверку приложения
+                    </div>
+                </div>
+                <div class="send-msg__item col-md-2">
+                    <div class="send-msg__item--img">
+                        <img src="images/send6.png" alt="">
+                    </div>
+                    <div class="send-msg__item--txt">
+                        Осуществляем поддержку — Вы можете быть уверены, что Ваше приложение работает исправно!
                     </div>
                 </div>
             </div>
@@ -333,11 +366,11 @@
                         <div class="advantage__item--middle">ТАЛАНТЛИВЫХ СПЕЦИАЛИСТОВ</div>
                         <div class="advantage__item--bottom">
                             с опытом разработки сложных проектов для российских и зарубежных компаний
-                        </div>  
+                        </div>
                     </div>
                     <div class="advantage__item col-md-3">
-                        <div class="advantage__item--top">300+</div> 
-                        <div class="advantage__item--middle">УСПЕШНЫХ проектов</div> 
+                        <div class="advantage__item--top">300+</div>
+                        <div class="advantage__item--middle">УСПЕШНЫХ проектов</div>
                         <div class="advantage__item--bottom">
                             и довольных бизнес-клиентов
                         </div>
@@ -359,10 +392,10 @@
                                 <img src="images/partners3.jpg" alt="">
                             </div>
                             <div class="parters-list__item col-md-4 text-center">
-                                <img src="images/partners9.jpg" alt="">    
+                                <img src="images/partners9.jpg" alt="">
                             </div>
                             <div class="parters-list__item col-md-4 text-center">
-                                <img src="images/partners6.jpg" alt="">    
+                                <img src="images/partners6.jpg" alt="">
                             </div>
                         </div>
                         <div class="row">
@@ -370,10 +403,10 @@
                                 <img src="images/partners2.jpg" alt="">
                             </div>
                             <div class="parters-list__item col-md-4 text-center">
-                                <img src="images/partners4.jpg" alt="">     
+                                <img src="images/partners4.jpg" alt="">
                             </div>
                             <div class="parters-list__item col-md-4 text-center">
-                                <img src="images/partners7.jpg" alt="">    
+                                <img src="images/partners7.jpg" alt="">
                             </div>
                         </div>
                         <div class="row">
@@ -381,10 +414,10 @@
                                 <img src="images/partners1.jpg" alt="">
                             </div>
                             <div class="parters-list__item col-md-4 text-center">
-                                <img src="images/partners5.jpg" alt="">     
+                                <img src="images/partners5.jpg" alt="">
                             </div>
                             <div class="parters-list__item col-md-4 text-center">
-                                <img src="images/partners8.jpg" alt="">    
+                                <img src="images/partners8.jpg" alt="">
                             </div>
                         </div>
                     </div>
