--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,18 @@
             </div>
         </header>
     </section>
-    <section class="slider">
+    <section class="slider-laptop">
+        <div class="container">
+            <div class="row">
+                <div class="slider-laptop__items">
+                    <div class="col-md-10">
+                        <div class="row">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <section class="web-app-dev">
         <div class="container">
