--- a/app/index.html
+++ b/app/index.html
@@ -393,41 +393,37 @@
     <section class="partners">
         <div class="container">
             <div class="row">
-                <div class="parters-list col-md-12">
+                <div class="parters-list col-md-12 text-center">
                     <div class="row">
                         <div class="text-center">
                             <div class="partners-title">наши партнеры</div>
                         </div>
                         <div class="col-md-12 parters-list-wrap">
-                            <div class="parters-list__item col-md-4 text-center">
+                            <div class="parters-list__item">
                                 <img src="images/partners3.jpg" alt="">
                             </div>
-                            <div class="parters-list__item col-md-4 text-center">
+                            <div class="parters-list__item">
                                 <img src="images/partners9.jpg" alt="">
                             </div>
-                            <div class="parters-list__item col-md-4 text-center">
+                            <div class="parters-list__item">
                                 <img src="images/partners6.jpg" alt="">
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="parters-list__item col-md-4 text-center">
+                            <div class="parters-list__item">
                                 <img src="images/partners2.jpg" alt="">
                             </div>
-                            <div class="parters-list__item col-md-4 text-center">
+                            <div class="parters-list__item">
                                 <img src="images/partners4.jpg" alt="">
                             </div>
-                            <div class="parters-list__item col-md-4 text-center">
+                            <div class="parters-list__item">
                                 <img src="images/partners7.jpg" alt="">
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="parters-list__item col-md-4 text-center">
+                            <div class="parters-list__item">
                                 <img src="images/partners1.jpg" alt="">
                             </div>
-                            <div class="parters-list__item col-md-4 text-center">
+                            <div class="parters-list__item">
                                 <img src="images/partners5.jpg" alt="">
                             </div>
-                            <div class="parters-list__item col-md-4 text-center">
+                            <div class="parters-list__item">
                                 <img src="images/partners8.jpg" alt="">
                             </div>
                         </div>
