--- a/app/index.html
+++ b/app/index.html
@@ -286,10 +286,10 @@
             <div class="row">
                 <div class="block-form__form">
                     <form action="" class="center-block text-center">
-                        <input type="text" placeholder="Имя"><br>
-                        <input type="text" placeholder="E-mail"><br>
-                        <input type="text" placeholder="Телефон"><br>
-                        <textarea name="" placeholder="Краткая постановка задачи/вопрос">
+                        <input name="nameGuest" type="text" placeholder="Имя"><br>
+                        <input name="emailGuest" type="text" placeholder="E-mail"><br>
+                        <input name="phoneGuest" type="text" placeholder="Телефон"><br>
+                        <textarea name="msgTask" placeholder="Краткая постановка задачи/вопрос">
                         </textarea><br>
                         <input class="btn" type="submit">
                     </form>
