Revert "slider fix"
This reverts commit cd0269be781d1d9975a6bfb57ad4f3a546760ec9.

--- a/app/index.html
+++ b/app/index.html
@@ -113,47 +113,47 @@
                 <div class="get-mob-app__title title">
                     получите мобильное приложение и...
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-8 center-block">
                     <div class="row">
-                        <div class="flexslider slider-2">
+                        <div class="flexslider">
                             <ul class="slides">
                                 <li class="slider2__item">
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--img ">
-                                        <img src="images/robot.png" height="187"/>
+                                    <div class="slider2__item--img col-md-offset-1 col-md-2">
+                                        <img src="images/robot.png" />
                                     </div>
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--txt ">
+                                    <div class="slider2__item--txt col-md-offset-1 col-md-4">
                                         Ваши расходы за счет автоматизации бизнес-процессов
                                     </div>
                                 </li>
                                 <li class="slider2__item">
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--img ">
-                                        <img src="images/robot.png" height="187"/>
+                                    <div class="slider2__item--img col-md-offset-1 col-md-2">
+                                        <img src="images/robot.png" />
                                     </div>
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--txt ">
+                                    <div class="slider2__item--txt col-md-offset-1 col-md-4">
                                         ...Управляйте данными с любой точке мира
                                     </div>
                                 </li>
                                 <li class="slider2__item">
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--img ">
-                                        <img src="images/robot.png" height="187"/>
+                                    <div class="slider2__item--img col-md-offset-1 col-md-2">
+                                        <img src="images/robot.png" />
                                     </div>
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--txt ">
+                                    <div class="slider2__item--txt col-md-offset-1 col-md-4">
                                         ...Повышайте эффективность труда Ваших сотрудников
                                     </div>
                                 </li>
                                 <li class="slider2__item">
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--img ">
+                                    <div class="slider2__item--img col-md-offset-1 col-md-2">
                                         <img src="images/robot.png" />
                                     </div>
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--txt ">
+                                    <div class="slider2__item--txt col-md-offset-1 col-md-4">
                                         ...Ускоряйте принятие управленческих решений
                                     </div>
                                 </li>
                                 <li class="slider2__item">
-                                    <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--img ">
+                                    <div class="slider2__item--img col-md-offset-1 col-md-2">
                                         <img src="images/robot.png" />
                                     </div>
-                                    <div class="col-md-offset-1 col-md-6 slider2__item--txt"> 
+                                    <div class="slider2__item--txt col-md-offset-1 col-md-4">
                                         ...Увеличивайте прибыльность Вашего бизнеса за счет доступности клиентов
                                     </div>
                                 </li>
