--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
                     <div class="main-slogan__bottom">
                         РАЗРАБОТАЕМ МОБИЛЬНОЕ ПРИЛОЖЕНИЕ ПОД ЛЮБУЮ БИЗНЕС-ЗАДАЧУ!
                     </div>
-                    <a href="" class="btn">получить бесплатную консультацию</a>
+                    <a href="" class="btn" data-toggle="modal" data-target="#free-consultation">получить бесплатную консультацию</a>
                 </div>
             </div>
         </header>
@@ -57,7 +57,6 @@
                 <div class="slider-laptop__items">
                     <div class="col-md-10">
                         <div class="row">
-                            
                         </div>
                     </div>
                 </div>
@@ -288,10 +287,11 @@
                     <form action="" class="center-block text-center">
                         <input name="nameGuest" type="text" placeholder="Имя" required><br>
                         <input name="email" type="text" placeholder="E-mail" required><br>
-                        <input name="phoneGuest" type="text" placeholder="Телефон" minlength="6" pattern="\+7\s\([0-9]{3}\)\s[0-9]{3}\s[0-9]{2}\s[0-9]{2}" required><br>
-                        <textarea name="msgTask" placeholder="Краткая постановка задачи/вопрос" required>
+                        <input name="phoneGuest" type="text" placeholder="Телефон" minlength="6" pattern="\+7\s\([0-9]{3}\)\s[0-9]{3}\s[0-9]{2}\s[0-9]{2}"
+                            required><br>
+                            <textarea name="msgTask" placeholder="Краткая постановка задачи/вопрос" required>
                         </textarea><br>
-                        <input class="btn" type="submit">
+                            <input class="btn" type="submit">
                     </form>
                 </div>
             </div>
@@ -394,7 +394,6 @@
         <div class="container">
             <div class="row">
                 <div class="partners-list col-md-12 text-center">
-
                     <div class="row">
                         <div class="text-center">
                             <div class="partners-title">наши партнеры</div>
@@ -457,6 +456,36 @@
             </div>
         </div>
     </footer>
+
+    <div class="modal fade" id="free-consultation" tabindex="-1" role="dialog">
+        <div class="free-consultation">
+            <div class="free-consultation__txt--title">
+                бесплатная консультация
+            </div>
+            <div class="free-consultation__txt--descr">
+                Узнайте, как мобильное приложение решит<br>
+                Ваши бизнес-задачи!
+            </div>
+            <div class="free-consultation__items">
+                <form action="">
+                    <input    name="nameInPopup"  type="text"   placeholder="Ваше имя"><br>
+                    <input    name="emailInPopup" type="email"  placeholder="E-mail"><br>
+                    <input    name="phonePopup"   type="text"   placeholder="Телефон"><br>
+                    <textarea name="msgInPopup"   placeholder="Краткая постановка задачи"></textarea><br>
+                    <div class="free-consultation__item">
+                        <div class="free-consultation__items--btn">
+                            <input type="submit"> 
+                        </div>
+                        <div class="free-consultation__items--response">
+                            Ответим Вам <br>
+                            в течение 2 часов!
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
