--- a/app/index.html
+++ b/app/index.html
@@ -440,7 +440,7 @@
                 </div>
             </div>
             <div class="row center-block">
-                <a href="" class="discussion-ideas btn">
+                <a href="" class="discussion-ideas btn" data-toggle="modal" data-target="#free-consultation">
                     поможем воплотить бизнес идею
                 </a>
             </div>
@@ -468,15 +468,15 @@
             </div>
             <div class="free-consultation__items">
                 <form action="">
-                    <input    name="nameInPopup"  type="text"   placeholder="Ваше имя"><br>
-                    <input    name="emailInPopup" type="email"  placeholder="E-mail"><br>
-                    <input    name="phonePopup"   type="text"   placeholder="Телефон"><br>
-                    <textarea name="msgInPopup"   placeholder="Краткая постановка задачи"></textarea><br>
+                    <input    name="nameInPopup"  type="text"   placeholder="Ваше имя" required><br>
+                    <input    name="emailInPopup" type="email"  placeholder="E-mail" required><br>
+                    <input    name="phonePopup"   type="text"   placeholder="Телефон" required><br>
+                    <textarea name="msgInPopup"   placeholder="Краткая постановка задачи" required></textarea><br>
                     <div class="free-consultation__item">
-                        <div class="free-consultation__items--btn">
+                        <div class="free-consultation__item--btn">
                             <input type="submit"> 
                         </div>
-                        <div class="free-consultation__items--response">
+                        <div class="free-consultation__item--response">
                             Ответим Вам <br>
                             в течение 2 часов!
                         </div>
