slider2, del img

--- a/app/index.html
+++ b/app/index.html
@@ -121,39 +121,44 @@
                                         <img src="images/robot.png" />
                                     </div>
                                     <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--txt">
-                                        Ваши расходы за счет автоматизации бизнес-процессов
+                                        <div class="slider2__item--bold">...Уменьшайте</div>
+                                        Ваши расходы за счет автоматизации<br> бизнес-процессов
                                     </div>
                                 </li>
                                 <li class="slider2__item">
                                     <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--img ">
-                                        <img src="images/robot.png" />
+                                        <img src="images/robot2.png" />
                                     </div>
                                     <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--txt">
-                                        ...Управляйте данными с любой точке мира
+                                        <span class="slider2__item--bold">...Управляйте</span> данными с любой<br>
+                                        точке мира
                                     </div>
                                 </li>
                                 <li class="slider2__item">
                                     <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--img ">
-                                        <img src="images/robot.png" />
+                                        <img src="images/robot3.png" />
                                     </div>
                                     <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--txt">
-                                        ...Повышайте эффективность труда Ваших сотрудников
+                                        <span class="slider2__item--bold">...Повышайте</span>
+                                        эффективность<br> труда Ваших сотрудников
                                     </div>
                                 </li>
                                 <li class="slider2__item">
                                     <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--img ">
-                                        <img src="images/robot.png" />
+                                        <img src="images/robot4.png" />
                                     </div>
                                     <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--txt">
-                                        ...Ускоряйте принятие управленческих решений
+                                        <span class="slider2__item--bold">...Ускоряйте</span>
+                                        принятие<br> управленческих решений
                                     </div>
                                 </li>
                                 <li class="slider2__item">
                                     <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--img ">
-                                        <img src="images/robot.png" />
+                                        <img src="images/robot5.png" />
                                     </div>
                                     <div class="col-xs-6 col-sm-6 col-md-6 slider2__item--txt">
-                                        ...Увеличивайте прибыльность Вашего бизнеса за счет доступности клиентов
+                                        <span class="slider2__item--bold">...Увеличивайте</span>
+                                        прибыльность<br> Вашего бизнеса за счет<br> доступности клиентов
                                     </div>
                                 </li>
                             </ul>
