--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
         <header class="header">
             <div class="header-container container">
                 <div class="header-logo">
-                    <img src="images/logo_2.svg" alt="">
+                    <img src="images/logo_2.svg?v=5" alt="">
                     <div class="contacts">
                         +7 (495) 933 48 41
                         <div>info@desnol.ru </div>
@@ -109,13 +109,13 @@
                     <div class="web-app-dev__plarform--title title">разработка под все популярные платформы</div>
                     <div class="web-app-dev__plarformItems center-block text-center">
                         <div class="web-app-dev__plarformItem">
-                            <img src="images/apple.svg" alt="">
+                            <img src="images/apple.svg?v=5" alt="">
                         </div>
                         <div class="web-app-dev__plarformItem">
-                            <img src="images/android.svg" alt="">
+                            <img src="images/android.svg?v=5" alt="">
                         </div>
                         <div class="web-app-dev__plarformItem">
-                            <img src="images/win.svg" alt="">
+                            <img src="images/win.svg?v=5" alt="">
                         </div>
                     </div>
                 </div>
@@ -278,7 +278,7 @@
                     <img src="images/possibilities-app11.jpg" alt="">
                 </div>
                 <div class="possibilities-app__item--txt">
-                    навстройка оповещений и push и уведомлений
+                    настройка оповещений и push и уведомлений
                 </div>
             </div>
             <div class="possibilities-app__item">
