--- a/app/index.html
+++ b/app/index.html
@@ -307,7 +307,7 @@
                 <div class="block-form__form">
                     <form action="" class="center-block text-center">
                         <input name="nameGuest" type="text" placeholder="Имя" required><br>
-                        <input name="emailGuest" type="text" placeholder="E-mail" required><br>
+                        <input name="emailGuest" type="email" placeholder="E-mail" required><br>
                         <input name="phoneGuest" type="text" placeholder="Телефон" required><br>
                         <textarea name="msgTask" placeholder="Краткая постановка задачи/вопрос" required></textarea><br>
                         <input class="btn" type="submit">
@@ -492,7 +492,7 @@
                 <form action="">
                     <input    name="nameInPopup"  type="text"   placeholder="Ваше имя" required><br>
                     <input    name="emailInPopup" type="email"  placeholder="E-mail" required><br>
-                    <input    name="phonePopup"   type="text"   placeholder="Телефон" required><br>
+                    <input    name="phoneInPopup"   type="text"   placeholder="Телефон" required><br>
                     <textarea name="msgInPopup"   placeholder="Краткая постановка задачи" required></textarea><br>
                     <div class="free-consultation__item">
                         <div class="free-consultation__item--btn">
