--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
             <video class="video" autoplay="true" loop="true" poster="images/preview-picture.jpg">
                 <source src="images/start-video.mp4" type="video/mp4">
             </video>
+            <div class="picture-bg"></div>
             <div class="main-slogan-wrap">
                 <div class="main-slogan">
                     <div class="main-slogan__top">
